fix: Testing the ability to add external projects to this timeline.  Will I keep this history!??!?!

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Warmmilk Click</title>
     <link rel="stylesheet" href="click.css" />
+    <script src="warmmilk-click-client.js"></script>
+    <script src="click-implementation.js" defer></script>
     <script src="boiler.js" defer></script>
     <script src="morph.js" defer></script>
   </head>
@@ -64,8 +66,8 @@
           vector-effect="non-scaling-stroke"
         />
       </svg>
-        <div class="content-area" style="height: 200vh;">
-            <!-- fake area for testing height -->
+        <div class="content-area">
+            <!-- Timeline will be rendered here -->
         </div>
       </div>
     </div>
